deploy/kubernetes/invokeai/deploy/deployment-rocm6.3-hostdev-mi50.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: invokeai

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invokeai
  namespace: invokeai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invokeai
  template:
    metadata:
      labels:
        app: invokeai
    spec:
      containers:
      - name: invokeai
        image: ghcr.io/thehonker/invokeai:rocm6.3-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
        resources:
          limits:
            hostdev.k8s.io/dev_kfd: 1
            hostdev.k8s.io/dev_dri_by-path_pci-0000_05_00.0-card: 1
            hostdev.k8s.io/dev_dri_by-path_pci-0000_05_00.0-render: 1
        volumeMounts:
        - mountPath: "/invokeai"
          name: invokeai-data
      - name: alpine-debug
        image: docker.io/alpine:latest
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        command:
        - /bin/sh
        - -c
        - |
          tail -f /dev/null
        volumeMounts:
        - mountPath: "/invokeai"
          name: invokeai-data
      volumes:
      - name: invokeai-data
        persistentVolumeClaim:
          claimName: invokeai-data

---
apiVersion: v1
kind: Service
metadata:
  name: invokeai
  namespace: invokeai
spec:
  type: ClusterIP
  selector:
    app: invokeai
  ports:
  - name: "http"
    port: 9090
    targetPort: 9090

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: invokeai-your-domain
  namespace: invokeai
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`invokeai.your.domain`)
    middlewares:
    - name: authentik
      namespace: authentik
    services:
    - name: invokeai
      port: 9090
  tls:
    secretName: invokeai-your-domain-ingress-tls-cert
